--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: recycleitapplication@gmail.com
+    password: aumntrenzcghinpz
