--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>9.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
