--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,8 +24,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: recycleitapplication@gmail.com
-    password: aumntrenzcghinpz
+    username: personalfinancemanagerapp1@gmail.com
+    password: hzogofazrtioykzt
 
   sms:
     enabled: false
